tests/NormalTests/paczka1/fuzzy1/97954438.err
Error in line 4: fY6 S723 51,8
Error in line 30: smFZxYCoW S500 88,4
